# Mice

./: .gitignore  AGENTS.md  Cargo.toml  decisions.md  manifest.md
.lavish/: mice-4b-agent-architecture.html  mice-coordination-mesh-plan.html  mice-guide-polish.html  mice-home-prototype.html  mice-mission-control-plan.html  mice-mission-control-tui-review.html
agent-linux/: Cargo.toml  README.md
agent-linux/src/: main.rs
agent-macos/: Package.swift
agent-macos/Sources/AXTest/: main.swift
agent-macos/Sources/CaptureTest/: main.swift
agent-macos/Sources/InjectTest/: main.swift
agent-macos/Sources/InputTest/: main.swift
agent-macos/Sources/MiceMacAgent/: main.swift
agent-macos/Sources/MiceMacSupport/: AX.swift  Permissions.swift
browser-ext/: README.md  background.js  content.js  manifest.json  options.html  options.js  popup.html  popup.js
crates/mice-cli/: Cargo.toml
crates/mice-cli/src/: coordination.rs  filing.rs  main.rs  mcp_client.rs  memory.rs  mission.rs  tidy.rs  tools.rs
crates/mice-core/: Cargo.toml
crates/mice-core/src/: lib.rs
crates/mice-ipc/: Cargo.toml
crates/mice-ipc/src/: lib.rs
crates/mice-providers/: Cargo.toml
crates/mice-providers/src/: lib.rs
plan/: auto.md  auto_intelligence.md  mice_m12_fix_bridge_and_stalls.md  mice_m12_review.md  mice_m13_execution_manager_review.md  mice_m14_remaining_issues.md  mice_planv1.md  mice_planv2_selection_and_goals.md  mice_planv3_files_smartcopy_agents.md  mice_planv4_guide_acts.md  mice_planv5_web_autopilot.md  mice_planv6_product_polish.md  mice_planv7_slm_tool_manager.md  mice_planv8_exponential_multipliers.md  mice_planv9_palette_polish_memory.md  mice_planv9_review.md  mice_research_industry_landscape.md
scripts/: mice.entitlements  package-macos.sh
