[workspace]
members = [
  "agent-linux",
  "crates/mice-ipc",
  "crates/mice-providers",
  "crates/mice-core",
  "crates/mice-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "0.8"
sha2 = "0.10"
