[package]
name = "mice-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mice"
path = "src/main.rs"

[dependencies]
crossterm = "0.28"
mice-core = { path = "../mice-core" }
mice-ipc = { path = "../mice-ipc" }
mice-providers = { path = "../mice-providers" }
ratatui = "0.29"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
# `tls` is required because all OpenAI and Groq endpoints are HTTPS. Keep the
# feature explicit so a future default-feature change cannot silently disable
# cloud provider transport.
ureq = { version = "2.12", default-features = false, features = ["json", "tls"] }
